--- a/pages/home.html
+++ b/pages/home.html
@@ -3,10 +3,50 @@
 <head>
     <meta charset="UTF-8" />
     <title>LFP Dashboard</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <div class="container">
+    <nav class="sidebar">
+        <div class="sidebar-top">
+            <div class="logo">
+                <i class="fa-solid fa-laptop"></i>
+                <span>LFP</span>
+            </div>
+
+            <ul class="nav-links">
+                <li>
+                    <a href="home.html">
+                        <i class="fa-solid fa-house"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="contribute.html">
+                        <i class="fa-solid fa-users"></i>
+                        <span>Contribute</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="places.html">
+                        <i class="fa-solid fa-map"></i>
+                        <span>Places</span>
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="fav.html">
+                        <i class="fa-regular fa-heart"></i>
+                        <span>Favorite</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="sidebar-bottom">
+            <i class="fa-regular fa-sun"></i>
+        </div>
+    </nav>
     <main class="main">
         <div class="search">
             <input placeholder="Search"></input>
