--- a/pages/places.html
+++ b/pages/places.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Places</title>
-    <link rel="stylesheet" href="place.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
             <h2>Places</h2>
 
             <div class="search-box">
-                <input type="text" placeholder="search">
+                <input type="search" placeholder="search">
             </div>
         </div>
 
