--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <header class="landing-header">
 
         <nav class="landing-nav">
@@ -41,7 +42,7 @@
                     Good wifi, best power, and good customer service.
                 </p>
 
-                <button class="start-btn">
+                <button class="start-btn" id="strt-btn">
                     Start now
                 </button>
             </div>
@@ -69,7 +70,12 @@
             </div>
         </section>
 
+        <section class="about">
+
+        </section>
+
     </main>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
