--- a/pages/home.html
+++ b/pages/home.html
@@ -5,6 +5,15 @@
     <title>LFP Dashboard</title>
     <link rel="stylesheet" href="../css/home.css" />
     <link rel="stylesheet" href="../css/style.css">
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 </head>
 <body>
 <div class="container">
@@ -50,10 +59,12 @@
     <main class="main">
         <div class="search">
             <input placeholder="Search"></input>
+            <i class="fa fa-search"></i>
         </div>
         <div class="stats">
             <div class="card">
                 <h3>Total places</h3>
+                <i class="fa-solid fa-map"></i>
                 <p>1,890</p>
             </div>
 
@@ -63,6 +74,7 @@
             </div>
 
             <div class="card">
+                <i class="fa-solid fa-people-group"></i>
                 <h3>Contributers</h3>
                 <p>50</p>
             </div>
@@ -70,16 +82,26 @@
 
         <h2 class="title">Places around your area</h2>
 
-       <div class="map-box">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3915.6181451994473!2d38.746802!3d9.010793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b85c0e72c773f%3A0x4e4c5d25e36385fb!2sAddis%20Ababa!5e0!3m2!1sen!2sET!4v1700000000000!5m2!1sen!2sET"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+        <div class="cont-map">
+            <div class="map-box">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3915.6181451994473!2d38.746802!3d9.010793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b85c0e72c773f%3A0x4e4c5d25e36385fb!2sAddis%20Ababa!5e0!3m2!1sen!2sET!4v1700000000000!5m2!1sen!2sET"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
 
-    <button class="view-btn">View more</button>
-</div>
+                <button class="view-btn">View more</button>
+            </div>
+
+            <div class="places">
+                <p>Total places <span id="totalPlaces" class="total-places">50</span></p>
+                <p><i class="fa-regular fa-mug-saucer"></i>Cafe <span id="numCafe" class="num-cafe">5</span></p>
+                <p><i class="fa-regular fa-hotel"></i>Hotel <span id="numHotel" class="num-hotel">2</span></p>
+            </div>
+        </div>
+
+       
 
 
     </main>
