--- a/contribute-location.html
+++ b/contribute-location.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contribute Location</title>
+
   <style>
     body {
       margin: 0;
@@ -30,16 +31,25 @@
     }
 
     .card h2 {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: 600;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    /* Wrapper to perfectly center label + input */
+    .field-group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      margin-bottom: 20px;
     }
 
     label {
       font-size: 0.9rem;
       margin-bottom: 6px;
-      align-self: flex-start;
-      margin-left: 70px;
+      text-align: center;
     }
 
     input[type="text"] {
@@ -49,15 +59,14 @@
       border-radius: 6px;
       padding: 10px 15px;
       font-size: 0.95rem;
-      margin-bottom: 30px;
+      text-align: center;
     }
 
     .photo-section {
-      align-self: flex-start;
-      margin-left: 70px;
       font-size: 0.9rem;
       margin-bottom: 10px;
       line-height: 1.4;
+      text-align: center;
     }
 
     .photo-upload {
@@ -72,6 +81,8 @@
       position: relative;
       cursor: pointer;
       transition: background 0.3s;
+      overflow: hidden;
+      margin-bottom: 20px;
     }
 
     .photo-upload:hover {
@@ -79,36 +90,94 @@
     }
 
     .photo-upload .circle {
-     width: 83px;
-     height: 83px; /* or 76px if you want the oval shape */
-     border-radius: 50%;
-     border: 2px solid #888;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     font-size: 3rem;
-     color: #777;
-     line-height: 1;           /* ensures vertical alignment */
-     box-sizing: border-box;   /* keeps border from affecting size */
-}
+      width: 83px;
+      height: 83px;
+      border-radius: 50%;
+      border: 2px solid #888;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 3rem;
+      color: #777;
+      pointer-events: none;
+    }
 
+    #photo-input {
+      display: none;
+    }
+
+    .preview {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .submit-btn {
+      width: 365px;
+      height: 55px;
+      background-color: #6a5ae0;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    .submit-btn:hover {
+      background-color: #584ad6;
+    }
   </style>
 </head>
+
 <body>
   <div class="card">
     <h2>Contribute location</h2>
-    
-    <label for="place-name">Name of the place</label>
-    <input type="text" id="place-name" placeholder="Boss burger" />
 
-    <div class="photo-section">
-      Add photo<br>
-      <small>• you must add at least 1 image</small>
-    </div>
+    <form>
+      <!-- Centered Name Field -->
+      <div class="field-group">
+        <label for="place-name">Name of the place</label>
+        <input type="text" id="place-name" placeholder="Boss burger" required />
+      </div>
 
-    <div class="photo-upload">
-      <div class="circle">＋</div>
-    </div>
+      <div class="photo-section">
+        Add photo<br>
+        <small>• you must add at least 1 image</small>
+      </div>
+
+      <label for="photo-input">
+        <div class="photo-upload">
+          <div class="circle">＋</div>
+          <img id="preview-img" class="preview" />
+        </div>
+      </label>
+
+      <input type="file" id="photo-input" accept="image/*" required />
+
+      <button type="submit" class="submit-btn">Submit</button>
+    </form>
   </div>
+
+  <script>
+    const photoInput = document.getElementById('photo-input');
+    const previewImg = document.getElementById('preview-img');
+
+    photoInput.addEventListener('change', function () {
+      const file = this.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          previewImg.src = e.target.result;
+          previewImg.style.display = "block";
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+  </script>
 </body>
 </html>
