Update styles and improve pages layout

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                     Good wifi, best power, and good customer service.
                 </p>
 
-                <button class="start-btn" id="strt-btn">
-                    Start now
-                </button>
+                <a href="pages/home.html" class="start-btn">Start now</a>
             </div>
 
             <div class="hero-img">
