--- a/pages/places.html
+++ b/pages/places.html
@@ -62,7 +62,7 @@
                 <div class="tabs">
                     <button class="tab active">New</button>
                     <button class="tab">Popular</button>
-                    <button class="tab">All</button>
+                    <button class="tab" id="all-tab">All</button>
                 </div>
             </div>
 
@@ -187,6 +187,7 @@
             </div>
         </main>
     </div>
+    <script type="module" src="../js/places.js"></script>
 </body>
 </html>
 
