fetching and displaying places from db

--- a/pages/places.html
+++ b/pages/places.html
@@ -67,9 +67,11 @@
             </div>
 
           
-            <div class="cards-grid">
-                <div class="place-card">
-                    <div class="place-image">
+            <div class="cards-grid places-container">
+                <!-- <div class="cards-grid places-container"></div> -->
+
+                <!-- <div class="place-card"> -->
+                    <!-- <div class="place-image">
                         <img src="../assets/images/cafe1.jpg" alt="Caravan Cafe">
                         <button class="favorite-btn">
                             <i class="fa-regular fa-heart"></i>
@@ -85,11 +87,11 @@
                             <span class="feature"><i class="fa-solid fa-plug"></i> Good</span>
                         </div>
                         <p class="place-address">Bole, Addis Ababa</p>
-                    </div>
-                </div>
+                    </div> -->
+                <!-- </div> -->
 
 
-                <div class="place-card">
+                <!-- <div class="place-card">
                     <div class="place-image">
                         <img src="../assets/images/cafe2.jpg" alt="Science Cafe">
                         <button class="favorite-btn">
@@ -126,8 +128,8 @@
                         </div>
                         <p class="place-address">Piazza, Addis Ababa</p>
                     </div>
-                </div>
-               <div class="place-card">
+                </div> -->
+               <!-- <div class="place-card">
                     <div class="place-image">
                         <img src="../assets/images/cafe1.jpg" alt="Angela Cafe">
                         <button class="favorite-btn">
@@ -145,8 +147,8 @@
                         </div>
                         <p class="place-address">Piazza, Addis Ababa</p>
                     </div>
-                </div>
-               <div class="place-card">
+                </div> -->
+               <!-- <div class="place-card">
                     <div class="place-image">
                         <img src="../assets/images/cafe2.jpg" alt="AASTU Cafe">
                         <button class="favorite-btn">
@@ -164,8 +166,8 @@
                         </div>
                         <p class="place-address">Piazza, Addis Ababa</p>
                     </div>
-                </div>
-               <div class="place-card">
+                </div> -->
+               <!-- <div class="place-card">
                     <div class="place-image">
                         <img src="../assets/images/cafe3.jpg" alt="AAU cafe">
                         <button class="favorite-btn">
@@ -182,7 +184,7 @@
                             <span class="feature"><i class="fa-solid fa-plug"></i> Good</span>
                         </div>
                         <p class="place-address">Piazza, Addis Ababa</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </main>
